src/ENVCAP/Parser/Implementation/ParseImp.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 2.1.7 from src/ENVCAP/Parser/Implementation/ParseImp.y
-----------------------------------------------------------------------------

state 77 contains 1 shift/reduce conflicts.
state 190 contains 1 shift/reduce conflicts.
state 204 contains 1 shift/reduce conflicts.

rule 25 is unused

terminal 'interface' is unused
terminal 'open' is unused
terminal '::' is unused
terminal ',,' is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_implementationParser -> Program             (0)
	Program -> Fragment                                (1)
	Fragment -> 'module' var Statements                (2)
	Fragment -> '@pure' 'module' var Import Required Statements   (3)
	Fragment -> '@resource' 'module' var Import Required Statements   (4)
	Import ->                                          (5)
	Import -> 'import' FileNames ';'                   (6)
	FileNames -> var FileNames                         (7)
	FileNames -> var                                   (8)
	Required ->                                        (9)
	Required -> 'require' var ';'                      (10)
	Required -> 'require' '(' Requirements ')' ';'     (11)
	Requirements -> Requirement                        (12)
	Requirements -> Requirement ',' Requirements       (13)
	Requirement -> var                                 (14)
	Statements -> Statements1 OptSemi                  (15)
	Statements1 -> Statements1 ';' Statement           (16)
	Statements1 -> Statement                           (17)
	OptSemi -> ';'                                     (18)
	OptSemi ->                                         (19)
	Statement -> Function                              (20)
	Statement -> Module                                (21)
	Statement -> Binding                               (22)
	Statement -> TyAlias                               (23)
	Statement -> Term                                  (24)
	Open -> 'open' Term                                (25)
	Term -> BaseTerm                                   (26)
	Term -> ConstructedTerm                            (27)
	Term -> List                                       (28)
	Term -> Parens                                     (29)
	Term -> error                                      (30)
	BaseTerm -> 'env'                                  (31)
	BaseTerm -> 'unit'                                 (32)
	BaseTerm -> FunctionApplication                    (33)
	BaseTerm -> Bool                                   (34)
	BaseTerm -> String                                 (35)
	BaseTerm -> int                                    (36)
	BaseTerm -> var                                    (37)
	ConstructedTerm -> Projection                      (38)
	ConstructedTerm -> ArithmeticOp                    (39)
	ConstructedTerm -> ComparisonOp                    (40)
	ConstructedTerm -> BooleanOp                       (41)
	ConstructedTerm -> IfThenElse                      (42)
	ConstructedTerm -> Lambda                          (43)
	ConstructedTerm -> Struct                          (44)
	ConstructedTerm -> Match                           (45)
	ConstructedTerm -> Tagging                         (46)
	ConstructedTerm -> Let                             (47)
	ConstructedTerm -> Letrec                          (48)
	ConstructedTerm -> Record                          (49)
	ConstructedTerm -> Tuple                           (50)
	ConstructedTerm -> DependentMerge                  (51)
	ConstructedTerm -> Box                             (52)
	Tagging -> ADTInstance 'as' Type                   (53)
	ADTInstance -> var                                 (54)
	ADTInstance -> '{' var Terms '}'                   (55)
	Terms -> BaseTerm Terms                            (56)
	Terms -> '(' ConstructedTerm ')' Terms             (57)
	Terms -> BaseTerm                                  (58)
	Terms -> '(' ConstructedTerm ')'                   (59)
	Match -> 'match' Term 'of' Cases                   (60)
	Cases -> Case Cases                                (61)
	Cases -> Case                                      (62)
	Case -> 'case' Pattern '=>' '{' Term '}'           (63)
	Pattern -> '[' ']'                                 (64)
	Pattern -> '(' var ':' var ')'                     (65)
	Pattern -> var                                     (66)
	Pattern -> '(' var Identifiers ')'                 (67)
	Identifiers -> var Identifiers                     (68)
	Identifiers -> var                                 (69)
	Box -> 'with' Term 'in' '{' Statements '}'         (70)
	Type -> BaseType                                   (71)
	Type -> ADT                                        (72)
	Type -> Type '->' Type                             (73)
	Type -> '[' Type ']'                               (74)
	Type -> '{' RecordType '}'                         (75)
	Type -> '(' IntersectionType ')'                   (76)
	Type -> Signature                                  (77)
	Type -> var                                        (78)
	Type -> '(' Type ')'                               (79)
	BaseType -> 'Unit'                                 (80)
	BaseType -> 'Int'                                  (81)
	BaseType -> 'Bool'                                 (82)
	BaseType -> 'String'                               (83)
	ADT -> Constructor '|' Constructor                 (84)
	ADT -> ADT '|' Constructor                         (85)
	Constructor -> var                                 (86)
	Constructor -> var BaseType                        (87)
	Constructor -> var '(' Type ')'                    (88)
	Constructor -> var ProductTypes                    (89)
	ProductTypes -> ProductTypes BaseType              (90)
	ProductTypes -> ProductTypes '(' Type ')'          (91)
	ProductTypes -> '(' Type ')' BaseType              (92)
	ProductTypes -> BaseType '(' Type ')'              (93)
	ProductTypes -> '(' Type ')' '(' Type ')'          (94)
	ProductTypes -> BaseType BaseType                  (95)
	IntersectionType -> IntersectionType ',' Type      (96)
	IntersectionType -> Type ',' Type                  (97)
	Projection -> Term '.' int                         (98)
	Projection -> Term '.' var                         (99)
	Module -> 'functor' var '(' ParamList ')' ':' Type '{' Statements '}'   (100)
	Module -> 'module' var ':' Type '{' Statements '}'   (101)
	Struct -> 'module' 'struct' '{' Statements '}'     (102)
	Struct -> 'module' 'struct' '(' ParamList ')' '{' Statements '}'   (103)
	Struct -> 'struct' '{' Statements '}'              (104)
	Struct -> 'struct' '(' ParamList ')' '{' Statements '}'   (105)
	Signature -> 'Sig' '[' Type ',' Type ']'           (106)
	Function -> 'function' var '(' ParamList ')' ':' Type '=' Term   (107)
	Function -> 'function' var '(' ParamList ')' ':' Type '{' Term '}'   (108)
	FunctionApplication -> var '(' Arguments ')'       (109)
	Binding -> 'let' var '=' Term                      (110)
	Binding -> 'val' var '=' Term                      (111)
	Lambda -> '(' Lambda ')' '(' Arguments ')'         (112)
	Lambda -> '\\(' ParamList ')' '=>' '{' Statements '}'   (113)
	Lambda -> '\\(' ParamList ')' '=>' Term            (114)
	Bool -> 'False'                                    (115)
	Bool -> 'True'                                     (116)
	String -> '\'' var '\''                            (117)
	String -> '"' var '"'                              (118)
	List -> '[' ']' '<' Type '>'                       (119)
	List -> '[' Elements ']' '<' Type '>'              (120)
	Elements -> Term ',' Elements                      (121)
	Elements -> Term                                   (122)
	TyAlias -> 'type' var '=' Type                     (123)
	DependentMerge -> '(' DependentMergeElements ')'   (124)
	DependentMergeElements -> DependentMergeElements ';' Term   (125)
	DependentMergeElements -> Term ';' Term            (126)
	Tuple -> '(' TupleElements ')'                     (127)
	TupleElements -> Term ',' TupleElements            (128)
	TupleElements -> Term ',' Term                     (129)
	RecordType -> Param ',' RecordType                 (130)
	RecordType -> Param                                (131)
	Param -> var ':' Type                              (132)
	Record -> '{' Records '}'                          (133)
	Records -> '"' var '"' '=' Term ',' Records        (134)
	Records -> '"' var '"' '=' Term                    (135)
	Records -> '\'' var '\'' '=' Term ',' Records      (136)
	Records -> '\'' var '\'' '=' Term                  (137)
	Records -> var '=' Term ',' Records                (138)
	Records -> var '=' Term                            (139)
	ParamList -> ParamL ',' ParamList                  (140)
	ParamList -> ParamL                                (141)
	ParamL -> var ':' Type                             (142)
	Let -> 'let' '{' bindings '}' 'in' '{' Term '}'    (143)
	Letrec -> 'letrec' '{' bindings '}' 'in' '{' Term '}'   (144)
	bindings -> binding ';' bindings                   (145)
	bindings -> binding                                (146)
	binding -> var ':' Type '=' Term                   (147)
	Arguments -> Term ',' Arguments                    (148)
	Arguments -> Term                                  (149)
	Parens -> '(' Term ')'                             (150)
	CurlyParens -> '{' Statements '}'                  (151)
	IfThenElse -> 'if' Parens 'then' Term 'else' Term   (152)
	IfThenElse -> 'if' Parens 'then' CurlyParens 'else' CurlyParens   (153)
	ComparisonOp -> Term '>=' Term                     (154)
	ComparisonOp -> Term '>' Term                      (155)
	ComparisonOp -> Term '==' Term                     (156)
	ComparisonOp -> Term '!=' Term                     (157)
	ComparisonOp -> Term '<' Term                      (158)
	ComparisonOp -> Term '<=' Term                     (159)
	BooleanOp -> Term '&&' Term                        (160)
	BooleanOp -> Term '||' Term                        (161)
	ArithmeticOp -> Term '+' Term                      (162)
	ArithmeticOp -> Term '-' Term                      (163)
	ArithmeticOp -> Term '*' Term                      (164)
	ArithmeticOp -> Term '/' Term                      (165)
	ArithmeticOp -> Term '%' Term                      (166)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	int            { TokenInt $$ }
	var            { TokenVar $$ }
	'@pure'        { TokenPure }
	'@resource'    { TokenResource }
	'interface'    { TokenInterface }
	'open'         { TokenOpen }
	'import'       { TokenImport }
	'require'      { TokenRequire }
	'unit'         { TokenUnit }
	'Sig'          { TokenSig }
	'Unit'         { TokenTyUnit }
	'Int'          { TokenTypeInt }
	'Bool'         { TokenTypeBool }
	'String'       { TokenTypeString }
	'->'           { TokenTypeArrow }
	'False'        { TokenFalse }
	'True'         { TokenTrue }
	'if'           { TokenIf }
	'type'         { TokenTyAlias }
	'then'         { TokenThen }
	'else'         { TokenElse }
	'val'          { TokenValDef }
	'let'          { TokenLet }
	'letrec'       { TokenLetrec }
	'in'           { TokenIn }
	'function'     { TokenFunc }
	'struct'       { TokenStruct }
	'module'       { TokenModule }
	'functor'      { TokenFunctor }
	'with'         { TokenBox }
	'as'           { TokenAs }
	'match'        { TokenMatch }
	'case'         { TokenCase }
	'of'           { TokenMatchOf }
	'['            { TokenOpenSqBracket }
	']'            { TokenCloseSqBracket }
	'::'           { TokenCons }
	','            { TokenComma }
	'+'            { TokenPlus }
	'-'            { TokenMinus }
	'*'            { TokenTimes }
	'/'            { TokenDiv }
	'%'            { TokenMod }
	'('            { TokenOB }
	')'            { TokenCB }
	'env'          { TokenQuery }
	'.'            { TokenProjection }
	'>='           { TokenGe }
	'>'            { TokenGt }
	'=='           { TokenEql }
	'!='           { TokenNeq }
	'<'            { TokenLt }
	'<='           { TokenLe }
	'&&'           { TokenAnd }
	'||'           { TokenOr }
	'|'            { TokenUnion }
	';'            { TokenSemicolon }
	':'            { TokenColon }
	'='            { TokenEq }
	'{'            { TokenOpenBracket }
	'\''           { TokenSingleQuote }
	'"'            { TokenDoubleQuote }
	'}'            { TokenCloseBracket }
	'\\('          { TokenLambda }
	'=>'           { TokenArrow }
	',,'           { TokenDepMerge }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_implementationParser rule  0
	Program         rule  1
	Fragment        rules 2, 3, 4
	Import          rules 5, 6
	FileNames       rules 7, 8
	Required        rules 9, 10, 11
	Requirements    rules 12, 13
	Requirement     rule  14
	Statements      rule  15
	Statements1     rules 16, 17
	OptSemi         rules 18, 19
	Statement       rules 20, 21, 22, 23, 24
	Open            rule  25
	Term            rules 26, 27, 28, 29, 30
	BaseTerm        rules 31, 32, 33, 34, 35, 36, 37
	ConstructedTerm rules 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52
	Tagging         rule  53
	ADTInstance     rules 54, 55
	Terms           rules 56, 57, 58, 59
	Match           rule  60
	Cases           rules 61, 62
	Case            rule  63
	Pattern         rules 64, 65, 66, 67
	Identifiers     rules 68, 69
	Box             rule  70
	Type            rules 71, 72, 73, 74, 75, 76, 77, 78, 79
	BaseType        rules 80, 81, 82, 83
	ADT             rules 84, 85
	Constructor     rules 86, 87, 88, 89
	ProductTypes    rules 90, 91, 92, 93, 94, 95
	IntersectionType rules 96, 97
	Projection      rules 98, 99
	Module          rules 100, 101
	Struct          rules 102, 103, 104, 105
	Signature       rule  106
	Function        rules 107, 108
	FunctionApplication rule  109
	Binding         rules 110, 111
	Lambda          rules 112, 113, 114
	Bool            rules 115, 116
	String          rules 117, 118
	List            rules 119, 120
	Elements        rules 121, 122
	TyAlias         rule  123
	DependentMerge  rule  124
	DependentMergeElements rules 125, 126
	Tuple           rule  127
	TupleElements   rules 128, 129
	RecordType      rules 130, 131
	Param           rule  132
	Record          rule  133
	Records         rules 134, 135, 136, 137, 138, 139
	ParamList       rules 140, 141
	ParamL          rule  142
	Let             rule  143
	Letrec          rule  144
	bindings        rules 145, 146
	binding         rule  147
	Arguments       rules 148, 149
	Parens          rule  150
	CurlyParens     rule  151
	IfThenElse      rules 152, 153
	ComparisonOp    rules 154, 155, 156, 157, 158, 159
	BooleanOp       rules 160, 161
	ArithmeticOp    rules 162, 163, 164, 165, 166

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_implementationParser -> . Program            (rule 0)

	'@pure'        shift, and enter state 3
	'@resource'    shift, and enter state 4
	'module'       shift, and enter state 5

	Program        goto state 6
	Fragment       goto state 2

State 1

	Program -> . Fragment                               (rule 1)

	'@pure'        shift, and enter state 3
	'@resource'    shift, and enter state 4
	'module'       shift, and enter state 5

	Fragment       goto state 2

State 2

	Program -> Fragment .                               (rule 1)

	%eof           reduce using rule 1


State 3

	Fragment -> '@pure' . 'module' var Import Required Statements    (rule 3)

	'module'       shift, and enter state 9


State 4

	Fragment -> '@resource' . 'module' var Import Required Statements    (rule 4)

	'module'       shift, and enter state 8


State 5

	Fragment -> 'module' . var Statements               (rule 2)

	var            shift, and enter state 7


State 6

	%start_implementationParser -> Program .            (rule 0)

	%eof           accept


State 7

	Fragment -> 'module' var . Statements               (rule 2)

	error          shift, and enter state 43
	int            shift, and enter state 44
	var            shift, and enter state 45
	'unit'         shift, and enter state 46
	'False'        shift, and enter state 47
	'True'         shift, and enter state 48
	'if'           shift, and enter state 49
	'type'         shift, and enter state 50
	'val'          shift, and enter state 51
	'let'          shift, and enter state 52
	'letrec'       shift, and enter state 53
	'function'     shift, and enter state 54
	'struct'       shift, and enter state 55
	'module'       shift, and enter state 56
	'functor'      shift, and enter state 57
	'with'         shift, and enter state 58
	'match'        shift, and enter state 59
	'['            shift, and enter state 60
	'('            shift, and enter state 61
	'env'          shift, and enter state 62
	'{'            shift, and enter state 63
	'\''           shift, and enter state 64
	'"'            shift, and enter state 65
	'\\('          shift, and enter state 66

	Statements     goto state 12
	Statements1    goto state 13
	Statement      goto state 14
	Term           goto state 15
	BaseTerm       goto state 16
	ConstructedTermgoto state 17
	Tagging        goto state 18
	ADTInstance    goto state 19
	Match          goto state 20
	Box            goto state 21
	Projection     goto state 22
	Module         goto state 23
	Struct         goto state 24
	Function       goto state 25
	FunctionApplicationgoto state 26
	Binding        goto state 27
	Lambda         goto state 28
	Bool           goto state 29
	String         goto state 30
	List           goto state 31
	TyAlias        goto state 32
	DependentMerge goto state 33
	Tuple          goto state 34
	Record         goto state 35
	Let            goto state 36
	Letrec         goto state 37
	Parens         goto state 38
	IfThenElse     goto state 39
	ComparisonOp   goto state 40
	BooleanOp      goto state 41
	ArithmeticOp   goto state 42

State 8

	Fragment -> '@resource' 'module' . var Import Required Statements    (rule 4)

	var            shift, and enter state 11


State 9

	Fragment -> '@pure' 'module' . var Import Required Statements    (rule 3)

	var            shift, and enter state 10


State 10

	Fragment -> '@pure' 'module' var . Import Required Statements    (rule 3)

	error          reduce using rule 5
	int            reduce using rule 5
	var            reduce using rule 5
	'import'       shift, and enter state 119
	'require'      reduce using rule 5
	'unit'         reduce using rule 5
	'False'        reduce using rule 5
	'True'         reduce using rule 5
	'if'           reduce using rule 5
	'type'         reduce using rule 5
	'val'          reduce using rule 5
	'let'          reduce using rule 5
	'letrec'       reduce using rule 5
	'function'     reduce using rule 5
	'struct'       reduce using rule 5
	'module'       reduce using rule 5
	'functor'      reduce using rule 5
	'with'         reduce using rule 5
	'match'        reduce using rule 5
	'['            reduce using rule 5
	'('            reduce using rule 5
	'env'          reduce using rule 5
	'{'            reduce using rule 5
	'\''           reduce using rule 5
	'"'            reduce using rule 5
	'\\('          reduce using rule 5

	Import         goto state 120

State 11

	Fragment -> '@resource' 'module' var . Import Required Statements    (rule 4)

	error          reduce using rule 5
	int            reduce using rule 5
	var            reduce using rule 5
	'import'       shift, and enter state 119
	'require'      reduce using rule 5
	'unit'         reduce using rule 5
	'False'        reduce using rule 5
	'True'         reduce using rule 5
	'if'           reduce using rule 5
	'type'         reduce using rule 5
	'val'          reduce using rule 5
	'let'          reduce using rule 5
	'letrec'       reduce using rule 5
	'function'     reduce using rule 5
	'struct'       reduce using rule 5
	'module'       reduce using rule 5
	'functor'      reduce using rule 5
	'with'         reduce using rule 5
	'match'        reduce using rule 5
	'['            reduce using rule 5
	'('            reduce using rule 5
	'env'          reduce using rule 5
	'{'            reduce using rule 5
	'\''           reduce using rule 5
	'"'            reduce using rule 5
	'\\('          reduce using rule 5

	Import         goto state 118

State 12

	Fragment -> 'module' var Statements .               (rule 2)

	%eof           reduce using rule 2


State 13

	Statements -> Statements1 . OptSemi                 (rule 15)
	Statements1 -> Statements1 . ';' Statement          (rule 16)

	';'            shift, and enter state 117
	'}'            reduce using rule 19
	%eof           reduce using rule 19

	OptSemi        goto state 116

State 14

	Statements1 -> Statement .                          (rule 17)

	';'            reduce using rule 17
	'}'            reduce using rule 17
	%eof           reduce using rule 17


State 15

	Statement -> Term .                                 (rule 24)
	Projection -> Term . '.' int                        (rule 98)
	Projection -> Term . '.' var                        (rule 99)
	ComparisonOp -> Term . '>=' Term                    (rule 154)
	ComparisonOp -> Term . '>' Term                     (rule 155)
	ComparisonOp -> Term . '==' Term                    (rule 156)
	ComparisonOp -> Term . '!=' Term                    (rule 157)
	ComparisonOp -> Term . '<' Term                     (rule 158)
	ComparisonOp -> Term . '<=' Term                    (rule 159)
	BooleanOp -> Term . '&&' Term                       (rule 160)
	BooleanOp -> Term . '||' Term                       (rule 161)
	ArithmeticOp -> Term . '+' Term                     (rule 162)
	ArithmeticOp -> Term . '-' Term                     (rule 163)
	ArithmeticOp -> Term . '*' Term                     (rule 164)
	ArithmeticOp -> Term . '/' Term                     (rule 165)
	ArithmeticOp -> Term . '%' Term                     (rule 166)

	'+'            shift, and enter state 102
	'-'            shift, and enter state 103
	'*'            shift, and enter state 104
	'/'            shift, and enter state 105
	'%'            shift, and enter state 106
	'.'            shift, and enter state 107
	'>='           shift, and enter state 108
	'>'            shift, and enter state 109
	'=='           shift, and enter state 110
	'!='           shift, and enter state 111
	'<'            shift, and enter state 112
	'<='           shift, and enter state 113
	'&&'           shift, and enter state 114
	'||'           shift, and enter state 115
	';'            reduce using rule 24
	'}'            reduce using rule 24
	%eof           reduce using rule 24


State 16

	Term -> BaseTerm .                                  (rule 26)

	'else'         reduce using rule 26
	'in'           reduce using rule 26
	'of'           reduce using rule 26
	']'            reduce using rule 26
	','            reduce using rule 26
	'+'            reduce using rule 26
	'-'            reduce using rule 26
	'*'            reduce using rule 26
	'/'            reduce using rule 26
	'%'            reduce using rule 26
	')'            reduce using rule 26
	'.'            reduce using rule 26
	'>='           reduce using rule 26
	'>'            reduce using rule 26
	'=='           reduce using rule 26
	'!='           reduce using rule 26
	'<'            reduce using rule 26
	'<='           reduce using rule 26
	'&&'           reduce using rule 26
	'||'           reduce using rule 26
	';'            reduce using rule 26
	'}'            reduce using rule 26
	%eof           reduce using rule 26


State 17

	Term -> ConstructedTerm .                           (rule 27)

	'else'         reduce using rule 27
	'in'           reduce using rule 27
	'of'           reduce using rule 27
	']'            reduce using rule 27
	','            reduce using rule 27
	'+'            reduce using rule 27
	'-'            reduce using rule 27
	'*'            reduce using rule 27
	'/'            reduce using rule 27
	'%'            reduce using rule 27
	')'            reduce using rule 27
	'.'            reduce using rule 27
	'>='           reduce using rule 27
	'>'            reduce using rule 27
	'=='           reduce using rule 27
	'!='           reduce using rule 27
	'<'            reduce using rule 27
	'<='           reduce using rule 27
	'&&'           reduce using rule 27
	'||'           reduce using rule 27
	';'            reduce using rule 27
	'}'            reduce using rule 27
	%eof           reduce using rule 27


State 18

	ConstructedTerm -> Tagging .                        (rule 46)

	'else'         reduce using rule 46
	'in'           reduce using rule 46
	'of'           reduce using rule 46
	']'            reduce using rule 46
	','            reduce using rule 46
	'+'            reduce using rule 46
	'-'            reduce using rule 46
	'*'            reduce using rule 46
	'/'            reduce using rule 46
	'%'            reduce using rule 46
	')'            reduce using rule 46
	'.'            reduce using rule 46
	'>='           reduce using rule 46
	'>'            reduce using rule 46
	'=='           reduce using rule 46
	'!='           reduce using rule 46
	'<'            reduce using rule 46
	'<='           reduce using rule 46
	'&&'           reduce using rule 46
	'||'           reduce using rule 46
	';'            reduce using rule 46
	'}'            reduce using rule 46
	%eof           reduce using rule 46


State 19

	Tagging -> ADTInstance . 'as' Type                  (rule 53)

	'as'           shift, and enter state 101


State 20

	ConstructedTerm -> Match .                          (rule 45)

	'else'         reduce using rule 45
	'in'           reduce using rule 45
	'of'           reduce using rule 45
	']'            reduce using rule 45
	','            reduce using rule 45
	'+'            reduce using rule 45
	'-'            reduce using rule 45
	'*'            reduce using rule 45
	'/'            reduce using rule 45
	'%'            reduce using rule 45
	')'            reduce using rule 45
	'.'            reduce using rule 45
	'>='           reduce using rule 45
	'>'            reduce using rule 45
	'=='           reduce using rule 45
	'!='           reduce using rule 45
	'<'            reduce using rule 45
	'<='           reduce using rule 45
	'&&'           reduce using rule 45
	'||'           reduce using rule 45
	';'            reduce using rule 45
	'}'            reduce using rule 45
	%eof           reduce using rule 45


State 21

	ConstructedTerm -> Box .                            (rule 52)

	'else'         reduce using rule 52
	'in'           reduce using rule 52
	'of'           reduce using rule 52
	']'            reduce using rule 52
	','            reduce using rule 52
	'+'            reduce using rule 52
	'-'            reduce using rule 52
	'*'            reduce using rule 52
	'/'            reduce using rule 52
	'%'            reduce using rule 52
	')'            reduce using rule 52
	'.'            reduce using rule 52
	'>='           reduce using rule 52
	'>'            reduce using rule 52
	'=='           reduce using rule 52
	'!='           reduce using rule 52
	'<'            reduce using rule 52
	'<='           reduce using rule 52
	'&&'           reduce using rule 52
	'||'           reduce using rule 52
	';'            reduce using rule 52
	'}'            reduce using rule 52
	%eof           reduce using rule 52


State 22

	ConstructedTerm -> Projection .                     (rule 38)

	'else'         reduce using rule 38
	'in'           reduce using rule 38
	'of'           reduce using rule 38
	']'            reduce using rule 38
	','            reduce using rule 38
	'+'            reduce using rule 38
	'-'            reduce using rule 38
	'*'            reduce using rule 38
	'/'            reduce using rule 38
	'%'            reduce using rule 38
	')'            reduce using rule 38
	'.'            reduce using rule 38
	'>='           reduce using rule 38
	'>'            reduce using rule 38
	'=='           reduce using rule 38
	'!='           reduce using rule 38
	'<'            reduce using rule 38
	'<='           reduce using rule 38
	'&&'           reduce using rule 38
	'||'           reduce using rule 38
	';'            reduce using rule 38
	'}'            reduce using rule 38
	%eof           reduce using rule 38


State 23

	Statement -> Module .                               (rule 21)

	';'            reduce using rule 21
	'}'            reduce using rule 21
	%eof           reduce using rule 21


State 24

	ConstructedTerm -> Struct .                         (rule 44)

	'else'         reduce using rule 44
	'in'           reduce using rule 44
	'of'           reduce using rule 44
	']'            reduce using rule 44
	','            reduce using rule 44
	'+'            reduce using rule 44
	'-'            reduce using rule 44
	'*'            reduce using rule 44
	'/'            reduce using rule 44
	'%'            reduce using rule 44
	')'            reduce using rule 44
	'.'            reduce using rule 44
	'>='           reduce using rule 44
	'>'            reduce using rule 44
	'=='           reduce using rule 44
	'!='           reduce using rule 44
	'<'            reduce using rule 44
	'<='           reduce using rule 44
	'&&'           reduce using rule 44
	'||'           reduce using rule 44
	';'            reduce using rule 44
	'}'            reduce using rule 44
	%eof           reduce using rule 44


State 25

	Statement -> Function .                             (rule 20)

	';'            reduce using rule 20
	'}'            reduce using rule 20
	%eof           reduce using rule 20


State 26

	BaseTerm -> FunctionApplication .                   (rule 33)

	int            reduce using rule 33
	var            reduce using rule 33
	'unit'         reduce using rule 33
	'False'        reduce using rule 33
	'True'         reduce using rule 33
	'else'         reduce using rule 33
	'in'           reduce using rule 33
	'of'           reduce using rule 33
	']'            reduce using rule 33
	','            reduce using rule 33
	'+'            reduce using rule 33
	'-'            reduce using rule 33
	'*'            reduce using rule 33
	'/'            reduce using rule 33
	'%'            reduce using rule 33
	'('            reduce using rule 33
	')'            reduce using rule 33
	'env'          reduce using rule 33
	'.'            reduce using rule 33
	'>='           reduce using rule 33
	'>'            reduce using rule 33
	'=='           reduce using rule 33
	'!='           reduce using rule 33
	'<'            reduce using rule 33
	'<='           reduce using rule 33
	'&&'           reduce using rule 33
	'||'           reduce using rule 33
	';'            reduce using rule 33
	'\''           reduce using rule 33
	'"'            reduce using rule 33
	'}'            reduce using rule 33
	%eof           reduce using rule 33


State 27

	Statement -> Binding .                              (rule 22)

	';'            reduce using rule 22
	'}'            reduce using rule 22
	%eof           reduce using rule 22


State 28

	ConstructedTerm -> Lambda .                         (rule 43)

	'else'         reduce using rule 43
	'in'           reduce using rule 43
	'of'           reduce using rule 43
	']'            reduce using rule 43
	','            reduce using rule 43
	'+'            reduce using rule 43
	'-'            reduce using rule 43
	'*'            reduce using rule 43
	'/'            reduce using rule 43
	'%'            reduce using rule 43
	')'            reduce using rule 43
	'.'            reduce using rule 43
	'>='           reduce using rule 43
	'>'            reduce using rule 43
	'=='           reduce using rule 43
	'!='           reduce using rule 43
	'<'            reduce using rule 43
	'<='           reduce using rule 43
	'&&'           reduce using rule 43
	'||'           reduce using rule 43
	';'            reduce using rule 43
	'}'            reduce using rule 43
	%eof           reduce using rule 43


State 29

	BaseTerm -> Bool .                                  (rule 34)

	int            reduce using rule 34
	var            reduce using rule 34
	'unit'         reduce using rule 34
	'False'        reduce using rule 34
	'True'         reduce using rule 34
	'else'         reduce using rule 34
	'in'           reduce using rule 34
	'of'           reduce using rule 34
	']'            reduce using rule 34
	','            reduce using rule 34
	'+'            reduce using rule 34
	'-'            reduce using rule 34
	'*'            reduce using rule 34
	'/'            reduce using rule 34
	'%'            reduce using rule 34
	'('            reduce using rule 34
	')'            reduce using rule 34
	'env'          reduce using rule 34
	'.'            reduce using rule 34
	'>='           reduce using rule 34
	'>'            reduce using rule 34
	'=='           reduce using rule 34
	'!='           reduce using rule 34
	'<'            reduce using rule 34
	'<='           reduce using rule 34
	'&&'           reduce using rule 34
	'||'           reduce using rule 34
	';'            reduce using rule 34
	'\''           reduce using rule 34
	'"'            reduce using rule 34
	'}'            reduce using rule 34
	%eof           reduce using rule 34


State 30

	BaseTerm -> String .                                (rule 35)

	int            reduce using rule 35
	var            reduce using rule 35
	'unit'         reduce using rule 35
	'False'        reduce using rule 35
	'True'         reduce using rule 35
	'else'         reduce using rule 35
	'in'           reduce using rule 35
	'of'           reduce using rule 35
	']'            reduce using rule 35
	','            reduce using rule 35
	'+'            reduce using rule 35
	'-'            reduce using rule 35
	'*'            reduce using rule 35
	'/'            reduce using rule 35
	'%'            reduce using rule 35
	'('            reduce using rule 35
	')'            reduce using rule 35
	'env'          reduce using rule 35
	'.'            reduce using rule 35
	'>='           reduce using rule 35
	'>'            reduce using rule 35
	'=='           reduce using rule 35
	'!='           reduce using rule 35
	'<'            reduce using rule 35
	'<='           reduce using rule 35
	'&&'           reduce using rule 35
	'||'           reduce using rule 35
	';'            reduce using rule 35
	'\''           reduce using rule 35
	'"'            reduce using rule 35
	'}'            reduce using rule 35
	%eof           reduce using rule 35


State 31

	Term -> List .                                      (rule 28)

	'else'         reduce using rule 28
	'in'           reduce using rule 28
	'of'           reduce using rule 28
	']'            reduce using rule 28
	','            reduce using rule 28
	'+'            reduce using rule 28
	'-'            reduce using rule 28
	'*'            reduce using rule 28
	'/'            reduce using rule 28
	'%'            reduce using rule 28
	')'            reduce using rule 28
	'.'            reduce using rule 28
	'>='           reduce using rule 28
	'>'            reduce using rule 28
	'=='           reduce using rule 28
	'!='           reduce using rule 28
	'<'            reduce using rule 28
	'<='           reduce using rule 28
	'&&'           reduce using rule 28
	'||'           reduce using rule 28
	';'            reduce using rule 28
	'}'            reduce using rule 28
	%eof           reduce using rule 28


State 32

	Statement -> TyAlias .                              (rule 23)

	';'            reduce using rule 23
	'}'            reduce using rule 23
	%eof           reduce using rule 23


State 33

	ConstructedTerm -> DependentMerge .                 (rule 51)

	'else'         reduce using rule 51
	'in'           reduce using rule 51
	'of'           reduce using rule 51
	']'            reduce using rule 51
	','            reduce using rule 51
	'+'            reduce using rule 51
	'-'            reduce using rule 51
	'*'            reduce using rule 51
	'/'            reduce using rule 51
	'%'            reduce using rule 51
	')'            reduce using rule 51
	'.'            reduce using rule 51
	'>='           reduce using rule 51
	'>'            reduce using rule 51
	'=='           reduce using rule 51
	'!='           reduce using rule 51
	'<'            reduce using rule 51
	'<='           reduce using rule 51
	'&&'           reduce using rule 51
	'||'           reduce using rule 51
	';'            reduce using rule 51
	'}'            reduce using rule 51
	%eof           reduce using rule 51


State 34

	ConstructedTerm -> Tuple .                          (rule 50)

	'else'         reduce using rule 50
	'in'           reduce using rule 50
	'of'           reduce using rule 50
	']'            reduce using rule 50
	','            reduce using rule 50
	'+'            reduce using rule 50
	'-'            reduce using rule 50
	'*'            reduce using rule 50
	'/'            reduce using rule 50
	'%'            reduce using rule 50
	')'            reduce using rule 50
	'.'            reduce using rule 50
	'>='           reduce using rule 50
	'>'            reduce using rule 50
	'=='           reduce using rule 50
	'!='           reduce using rule 50
	'<'            reduce using rule 50
	'<='           reduce using rule 50
	'&&'           reduce using rule 50
	'||'           reduce using rule 50
	';'            reduce using rule 50
	'}'            reduce using rule 50
	%eof           reduce using rule 50


State 35

	ConstructedTerm -> Record .                         (rule 49)
